--- a/index.html
+++ b/index.html
@@ -21,39 +21,40 @@
   <script>
     const form = document.getElementById('upload-form');
     const resultDiv = document.getElementById('result');
-
+  
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
       const file = document.getElementById('image').files[0];
       if (!file) return;
-
+  
       const formData = new FormData();
       formData.append('file', file);
-
+  
       resultDiv.innerHTML = '⏳ Processing...';
-
+  
       try {
         const response = await fetch('https://hackathon-2025-uowj.onrender.com/predict', {
           method: 'POST',
           body: formData
         });
-
+  
+        if (!response.ok) {
+          throw new Error('Bad response from server');
+        }
+  
         const data = await response.json();
         console.log(data);
-
-        if ('broken_detected' in data) {
-          if (data.detections === 0) {
-            resultDiv.innerHTML = `✅ Image processed. No tiles detected.`;
-          } else if (data.broken_detected) {
-            resultDiv.innerHTML = `🟥 Broken tile(s) detected<br>Total detections: ${data.detections}`;
-          } else {
-            resultDiv.innerHTML = `✅ No broken tiles detected`;
-          }
+  
+        if (data.detections === 0) {
+          resultDiv.innerHTML = `⚠️ No tiles detected in this image`;
+        } else if (data.broken_detected) {
+          resultDiv.innerHTML = `🟥 Broken tile(s) detected<br>Total detections: ${data.detections}`;
         } else {
-          resultDiv.innerHTML = '❌ Unexpected server response.';
+          resultDiv.innerHTML = `✅ Tiles detected<br>🔹 No broken tiles found`;
         }
       } catch (err) {
-        resultDiv.innerHTML = '❌ Error processing the image.';
+        console.error(err);
+        resultDiv.innerHTML = '❌ An unexpected error occurred while processing the image.';
       }
     });
   </script>
