modified:   index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         if (data.error) {
           resultDiv.innerHTML = `❌ ${data.error}`;
         } else if (data.detections === 0) {
-          resultDiv.innerHTML = `⚠️ No tiles detected in this image`;
+          resultDiv.innerHTML = `⚠️ No broken tiles detected in this image`;
         } else if (data.broken_detected) {
           resultDiv.innerHTML = `🟥 Broken tile(s) detected<br>Total detections: ${data.detections}`;
         } else {
